Base de datos de Cluster integrada (a los coñazos)

--- a/projects/Fantasy/TODO
+++ b/projects/Fantasy/TODO
@@ -1,1 +1,2 @@
+Integrar el avance de noticias de Carlo y Daniel (tanto sus scripts para la base de datos como las cosas del webroot)
 Poner cosas en el TODO
