fachadaInterfaz semi-integrada, modelo de Daniel
Agregué en la carpeta projects/Fantasy/prototipo/3 el prototipo no
funcional que hizo Daniel.  El 1 es el viejo que hizo Alexis en
Photoshop y el 2 sería el que hizo Christian, pero nunca lo agregué.
Igual a estas alturas ya no importa.

Mejoré un poco la correspondencia entre el diagrama de clases y la
implementación de la base de datos.  Igual falta trabajo para eso.
También arreglé varios detalles pendientes en los demás scripts; entre
otras cosas, actualicé la definición de los permisos sobre la base de
datos, y separé los de cada rol en archivos aparte para poder trabajar
mejor.

Ahora se crean usuarios en el sample.sql.  Falta poner ligas y rosters y
demás datos para hacer pruebas.

Adapté el noticias.php para funcionar con la cuestión de las capas como
la llevo ahorita.  Los archivos que deberían tomarse como referencia
para trabajar en este punto son:
- equipos.php
- noticias.php

Avancé significativamente en adecentar el código de
"fachadaInterfaz.php" para poder integrar.  Aun no he podido revisar
casi ninguno de los archivos que usan para cuestiones de controlador, y
hay inconsistencias graves entre lo que está modelado y lo que
implementaron para los rosters...

--- a/projects/Fantasy/TODO
+++ b/projects/Fantasy/TODO
@@ -1,4 +1,4 @@
-Agregar usuarios del sistema, ligas y más cosas a database/sample.sql
+Agregar ligas y más cosas a database/sample.sql
 Borrar de webroot todo lo que no se esté usando
 Terminar de integrar
 Poner cosas en el TODO
